--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "main": "lib/handlebars-string.js",
   "author": "Lloyd Brookes",
   "dependencies": {
-    "wodge": "~0.6.6"
+    "array-ting": "^1.0.4"
   }
 }
