--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "lib/handlebars-string.js",
   "author": "Lloyd Brookes",
   "dependencies": {
-    "array-ting": "^1.0.4"
+    "array-ting": "^1.0.4",
+    "string-ting": "^0.1.0"
   }
 }
