--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "https://github.com/75lb/handlebars-string",
   "main": "lib/handlebars-string.js",
   "author": "Lloyd Brookes",
+  "license": "MIT",
   "dependencies": {
     "array-tools": "^1.0.6",
     "string-tools": "^0.1.4"
